--- a/src/components/web/header/index.less
+++ b/src/components/web/header/index.less
@@ -1,36 +1,145 @@
-.header-container {
-    background-color: #fff;
-    .ant-menu-horizontal {
-        height: 64px;
-        line-height: 64px;
-        display: -ms-flexbox;
-        display: flex;
-        justify-content: space-around;
+.header {
+    padding: 0;
+    background-color: #24292e;
+    -webkit-box-shadow: 0 2px 8px #f0f1f2;
+    box-shadow: 0 2px 8px #f0f1f2;
+    position: relative;
+    z-index: 32;
+    max-width: 100%;
+    .header-left {
+        text-align: center;
+        font-size: 20px;
+        position: relative;
+        .blog-slogan {
+            cursor: pointer;
+            font-size: 26px;
+            color: #e7e7e7;
+            font-family: 'Courier New', Courier, monospace;
+            padding-left: 10px;
+        }
+        .mobile-menu {
+            display: none;
+            color: #e7e7e7;
+            #search-box .search-icon {
+                position: relative;
+                float: right;
+            }
+        }
+    }
+    #search-box {
+        float: left;
+        height: 22px;
+        line-height: 22px;
+        padding-left: 16px;
+        margin: 22px auto 0;
+    }
+    #search-box .search-icon {
+        color: #a3b1bf;
+        position: relative;
+        float: right;
+        right: 20px;
+        top: 4px;
+        z-index: 10;
+    }
+    #search-box input {
+        font-size: 14px;
+        margin-top: -5px;
+        width: 200px;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+    #search-box input::-webkit-input-placeholder {
+        color: #a3b1bf;
+    }
+    #search-box input:-ms-input-placeholder {
+        color: #a3b1bf;
+    }
+    #search-box input::-ms-input-placeholder {
+        color: #a3b1bf;
+    }
+    #search-box input::placeholder {
+        color: #a3b1bf;
+    }
+    .header-nav-wrapper {
+        float: right;
+    }
+    .header-nav {
+        border: 0;
+        float: right;
+        font-size: 14px;
+        font-variant: tabular-nums;
+        background-color: #24292e;
+    }
+    .header-nav.ant-menu-horizontal {
         border-bottom: none;
     }
-
-    .nav-auth {
+    .header-nav.ant-menu-horizontal > .ant-menu-item {
+        height: 64px;
+        line-height: 60px;
+        min-width: 72px;
+        border-top: 2px solid transparent;
+    }
+    .header-nav.ant-menu-horizontal > .ant-menu-item a {
+        color: #e7e7e7;
+    }
+    .header-nav.ant-menu-horizontal > .ant-menu-item:hover {
+        border-top: 2px solid #1890ff;
+        border-bottom: 2px solid transparent;
+    }
+    .header-nav.ant-menu-horizontal > .ant-menu-item:hover a {
+        color: #1890ff;
+    }
+    .header-nav.ant-menu-horizontal > .ant-menu-item-selected {
+        border-top: 2px solid #1890ff;
+        border-bottom: 2px solid transparent;
+    }
+    .header-nav.ant-menu-horizontal > .ant-menu-item-selected a {
+        color: #1890ff;
+    }
+    .header-nav > .ant-menu-item {
+        text-align: center;
+    }
+    #header-right {
         float: right;
-        right: 10px;
+        padding: 0 40px 0 16px;
     }
-
-    .user-info {
-        display: flex;
-        flex-direction: row-reverse;
-        margin-top: 12px;
+    @media screen and (max-width: 926px) {
+        #search-box {
+            display: none;
+        }
     }
-
-    .user-info .user-avatar {
-        border-radius: 50%;
-        cursor: pointer;
+    @media screen and (max-width: 880px) and (min-width: 576px) {
+        .header-left {
+            .blog-slogan {
+                display: none;
+            }
+        }
     }
-
-    .user-logout {
-        padding: 20px;
+      @media only screen and (max-width: 576px) {
+        .header-left .mobile-menu {
+            display: block;
+            position: absolute;
+            font-size: 14px;
+            right: 30px;
+            top: 25px;
+            width: 16px;
+            height: 22px;
+            z-index: 1;
+        }
+        // .header-left .header-nav {
+        //   left: 440px;
+        // }
+        }
     }
-
-}
-
-.ant-dropdown-menu-item a i {
-    padding-right: 8px;
+    .header-dropdown {
+        right: 0 !important;
+    }
+    
+    @media screen and (max-width: 736px) {
+        .ant-divider-inner-text {
+            max-width: calc(100vw - 77px);
+            overflow: auto;
+            text-overflow: ellipsis;
+    }
 }
