--- a/src/components/web/header/index.less
+++ b/src/components/web/header/index.less
@@ -109,14 +109,14 @@
             display: none;
         }
     }
-    @media screen and (max-width: 880px) and (min-width: 576px) {
+    @media screen and (max-width: 990px) and (min-width: 620px) {
         .header-left {
             .blog-slogan {
                 display: none;
             }
         }
     }
-      @media only screen and (max-width: 576px) {
+      @media only screen and (max-width: 620px) {
         .header-left .mobile-menu {
             display: block;
             position: absolute;
@@ -127,11 +127,14 @@
             height: 22px;
             z-index: 1;
         }
-        // .header-left .header-nav {
-        //   left: 440px;
-        // }
+        .header-nav {
+            display: none;
+        }
+        #header-right {
+            display: none;
         }
     }
+    
     .header-dropdown {
         right: 0 !important;
     }
@@ -141,5 +144,6 @@
             max-width: calc(100vw - 77px);
             overflow: auto;
             text-overflow: ellipsis;
+        }
     }
 }
