add administrator pages

--- a/src/components/web/catalogueLayout/index.less
+++ b/src/components/web/catalogueLayout/index.less
@@ -1,5 +1,10 @@
 .catalogue-wrapper {
-    height: calc(100vh - 60px - 40px);
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
+    background-color: #fff;
+}
+
+.select-wrapper {
+    padding: 0 40px 20px 0;
+    .select-button {
+        float: right;
+    }
 }
