--- a/src/views/admin/login/index.less
+++ b/src/views/admin/login/index.less
@@ -1,25 +1,27 @@
 .login-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 80vh;
     overflow: auto;
-    background-size: 100%;
-    background-color: #f0f2f5;
+    background-size: 80%;
+    background-color: #fff;
     align-items: center;
     justify-content: center;
     .login-form {
         width: 368px;
         margin-top: -200px;
         .App-logo {
-          animation: App-logo-spin infinite 20s linear;
+        //   animation: App-logo-spin infinite 20s linear;
+            left: 40px;
+            padding: 0 0 20px;
         }
-        @keyframes App-logo-spin {
-            from {
-              transform: rotate(0deg);
-            }
-            to {
-              transform: rotate(360deg);
-            }
-        }
+        // @keyframes App-logo-spin {
+        //     from {
+        //       transform: rotate(0deg);
+        //     }
+        //     to {
+        //       transform: rotate(360deg);
+        //     }
+        // }
     }
 }
