--- a/src/components/admin/Layout/index.less
+++ b/src/components/admin/Layout/index.less
@@ -12,11 +12,14 @@
             .content-inner-wrapper {
                 position: relative;
                 padding: 0 300px 40px 40px;
+                
             }
         }
         .content-wrapper .loading {
-            position: fixed;
-            right: 1000px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, 20%);
         }
     }
 }
