developing article page

--- a/src/components/web/catalogueLayout/index.less
+++ b/src/components/web/catalogueLayout/index.less
@@ -4,7 +4,6 @@
 
 .select-wrapper {
     padding: 0 40px 20px 0;
-    .select-button {
-        float: right;
-    }
+    position: relative;
+    float: right;
 }
