--- a/src/components/web/layout/index.less
+++ b/src/components/web/layout/index.less
@@ -1,5 +1,5 @@
 .app-container {
-    background-color: #fff;
+    background-color: #fdfdfd;
     .main-wrapper {
         background-color: #fff;
         padding: 40px 0 0 0;
