--- a/src/components/web/layout/index.less
+++ b/src/components/web/layout/index.less
@@ -1,12 +1,13 @@
 .app-container {
     background-color: #fdfdfd;
-    .main-wrapper {
+    .layout-wrapper {
         background-color: #fff;
-        padding: 40px 0 0 0;
+        padding: 0 0 0 0;
         position: relative;
 
         .content-wrapper {
             height: calc(100vh - 64px - 40px);
+            padding: 40px 0 40px 0;
             overflow: auto;
             -webkit-overflow-scrolling: touch;
             .content-inner-wrapper {
