constructing manage page

--- a/src/views/admin/write/index.less
+++ b/src/views/admin/write/index.less
@@ -20,7 +20,8 @@
 .preview-check {
     margin-left: 5px;
 }
-.code-mirror-side {
-    margin-top: 150px;
-    margin-left: 50px;
+
+.edit-wrapper {
+    margin-top: 30px;
+    margin-bottom: 200px;
 }
