--- a/src/components/web/layout/index.less
+++ b/src/components/web/layout/index.less
@@ -6,13 +6,19 @@
         position: relative;
 
         .content-wrapper {
-            height: calc(100vh - 64px - 40px);
+            height: calc(100vh - 64px - 0px);
             padding: 40px 0 40px 0;
             overflow: auto;
             -webkit-overflow-scrolling: touch;
-            .content-inner-wrapper {
-                position: relative;
-                padding: 0 300px 40px 40px;
+            // .content-inner-wrapper {
+            //     position: relative;
+            //     padding: 0 300px 40px 40px;
+            // }
+            .inner-content-wrapper {
+                padding-bottom: 100px;
+            }
+            .layout-footer {
+                text-align: center;
             }
         }
         .content-wrapper .loading {
